--- a/src/AppointmentScheduler.Api/appsettings.Development.json
+++ b/src/AppointmentScheduler.Api/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost,1433;Database=Db_AppointmentScheduler;User Id=sa;Password=1234567;TrustServerCertificate=True;"
+    },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug"
     }
   }
 }
