fix: ajustando o docker compose para rodar corretamente na imagem do sql e corrigindo restart em looping, conexão ok e helth checks configurados

--- a/src/AppointmentScheduler.Api/appsettings.Development.json
+++ b/src/AppointmentScheduler.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1433;Database=Db_AppointmentScheduler;User Id=sa;Password=1234567;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=localhost,1433;Database=AppointmentScheduler;User Id=sa;Password=12345678@SenhaForte;TrustServerCertificate=True;"
     },
   "Logging": {
     "LogLevel": {
