--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: sqlserver
     environment:
-      SA_PASSWORD: "1234567"
+      SA_PASSWORD: "12345678@SenhaForte"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
@@ -15,6 +15,9 @@ services:
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
+    environment:
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: "guest"
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -22,4 +25,3 @@ services:
 
 volumes:
   sqlserver_data:
-
